# ioc-vet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/iocvet/: __init__.py  __main__.py  cli.py  config.py
src/iocvet/core/: aggregator.py  defang.py  detector.py  models.py
src/iocvet/output/: terminal.py
src/iocvet/providers/: __init__.py  abuseipdb.py  base.py  ipapi.py  rdap.py  urlhaus.py
tests/: test_defang.py  test_detector.py  test_domains.py  test_providers.py  test_regressions.py  test_security.py
